Scroll on small screen fixing

--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,11 @@ body[data-theme="dark"] {
   transition: color 0.3s ease-in-out;
 }
 
+html,
+body {
+  overscroll-behavior-y: contain;
+}
+
 html {
   scroll-snap-type: y mandatory;
   scroll-behavior: smooth;
